--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u794158688_millenimua
+DB_USERNAME=u794158688_db_millenimua
+DB_PASSWORD=kYn>G9o[Q
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
